# giu-ai-connects-notebooks

./: .env.example  .gitignore  00-warmup-first-calls.ipynb  README.md  day2-build-an-agent.ipynb  day3-production-machinery.ipynb  day3a-middleware.ipynb  day3b-human-in-the-loop.ipynb  day3c-skills.ipynb  day3d-backends-and-sandboxes.ipynb  day4-agents-in-action.ipynb  day4a-mcp-and-subagents.ipynb  day4b-triage-and-evals.ipynb  pyproject.toml  requirements.txt
