[project]
name = "giu-ai-connects-notebooks"
version = "0.1.0"
description = "GIU AI Connects workshop notebooks — LangChain v1, create_agent-centered"
requires-python = ">=3.12"
dependencies = [
    "langchain[anthropic]>=1.0",
    "langgraph>=1.0",
    "langgraph-checkpoint-sqlite>=2.0",
    "langchain-mcp-adapters>=0.1",
    "mcp>=1.9",
    "deepagents>=0.2",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "jupyterlab>=4.2",
]
